# graphql-authz-proxy

./: .gitignore  .python-semantic-release  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-deploy.yml  publish-pypi.yml  release.yml  setup-project.yml  ticket-manager.yml  worker-agent-caller.yml
examples/configuration/: permissions_examples.md
examples/kubernetes/oauth_proxy/: graphql-oauth-proxy-configmap.yaml  graphql-oauth-proxy-deployment.yaml  graphql-oauth-proxy-service.yaml  oauth-proxy-deployment.yaml  oauth-proxy-ingress.yaml  oauth-proxy-service.yaml
graphql_authz_proxy/: __init__.py  _rust.py  cli.py  flask_app.py  gunicorn_runner.py  main.py  models.py  routes.py
graphql_authz_proxy/authz/: github.py  permissions.py  utils.py
graphql_authz_proxy/identity_providers/: azure.py  base.py  custom.py  github.py  main.py
graphql_authz_proxy/tests/: docker-compose.yml  fixtures.py  test_app_permissions.py  test_cli.py  test_config_parsing.py  test_dagster_queries.py  test_flask_app.py  test_graphql_operation_parsing.py  test_integration.py  test_packaging.py  test_release_config.py  test_rust_build.py  test_rust_interop.py
graphql_authz_proxy/tests/authz_configs/: groups.yaml  users.yaml
graphql_authz_proxy/tests/graphql_queries/: RecentAssetsEventsQuery.gql
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
