[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphql-authz-proxy"
version = "0.1.0"
description = "Proxy to enforce fine-grained authorization rules on GraphQL APIs."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Kevin McQuate" },
]
keywords = ["graphql", "authorization", "proxy", "authz", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
]
dependencies = [
    "flask>=3.1.2",
    "graphql-core>=3.2.6",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.7.0",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "typer>=0.17.4",
]
[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "testcontainers>=4.13.0",
    "pytest-cov>=4.1.0",
    "pybadges>=3.0.1",
    "anybadge>=1.16.0"
]

[project.scripts]
gqlproxy = "graphql_authz_proxy.cli:typer_app"

[project.urls]
Homepage = "https://github.com/kgmcquate/graphql-authz-proxy"
Repository = "https://github.com/kgmcquate/graphql-authz-proxy"
Issues = "https://github.com/kgmcquate/graphql-authz-proxy/issues"
Changelog = "https://github.com/kgmcquate/graphql-authz-proxy/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["graphql_authz_proxy"]

[tool.semantic_release]
# Keep the package __version__ and the project version in lock-step.
version_variables = ["graphql_authz_proxy/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
# Wheels/sdists are not published to PyPI; releasing only creates tags,
# GitHub releases and the changelog, so building is skipped in the workflow.
build_command = ""
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.ruff]
line-length = 120
exclude = [".venv", "__pycache__", "build", "dist", "tests", "identity_providers"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90", "D", "N", "S", "ANN", "COM", "T20", "Q", "RSE", "SIM", "ARG", "PL", "TRY", "ERA", "RUF"]
ignore = ["PLR2004", "S101", "COM812", "D205", "D211", "D213", "TRY401", "TRY003", "TRY301"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true
