[package]
name = "graphql_authz_proxy_rs"
version = "0.1.0"
edition = "2021"
description = "Native Rust components for graphql-authz-proxy (Rust <-> Python interop)"
license = "MIT"

[lib]
name = "graphql_authz_proxy_rs"
# cdylib -> Python extension module; rlib -> `cargo test` can link the crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
